fix padding misalignment

--- a/static/style.css
+++ b/static/style.css
@@ -16,7 +16,7 @@ h2 {color: #2a3d66;}
 table {width: 100%; border-collapse: collapse; margin-top: 10px;}
 ul {list-style-type: square; padding-left: 20px;}
 th {background-color: #cfe2f3; color: #2a3d66; border: 1px solid #999; padding-top: 12px; padding-bottom: 12px; text-align: left; width: fit-content}
-td {background-color: #ffffff; border: 1px solid #999; padding: 10px;}
+td {background-color: #ffffff; border: 1px solid #999}
 footer {margin: 20 px; text-align: center; padding: 10px; background-color: #cfe2f3; color: #2a3d66;}
 a {margin-right: 15px; color: #32446c; text-transform: none; text-decoration: none;}
 div {margin: 20px; padding: 20px; background-color: white; border-radius: 8px;}
